# lovable-handoff/openapi.json
@@ -9646,6 +9646,11 @@
               }
             ],
             "title": "Created At"
+          },
+          "sent_today": {
+            "type": "integer",
+            "title": "Sent Today",
+            "default": 0
           }
         },
         "type": "object",
